# boxboard

./: .editorconfig  .gitignore  README.md  firebase.json
.github/workflows/: build.yml
server/: .gitignore  Cargo.toml  faunadb.graphql  queries.graphql  schema.graphql
server/src/: auth.rs  domain.rs  errors.rs  graphql.rs  handler.rs  main.rs
server/src/domain/: services.rs  values.rs
server/src/domain/board/: model.rs  repository.rs
server/src/domain/services/: board_service.rs
server/src/domain/values/: board_id.rs  box_id.rs  user_id.rs
server/src/graphql/: context.rs  input.rs  mutation.rs  query.rs  schema.rs
server/src/infra/board/: repository.rs
web/: .babelrc  bsconfig.json  graphql_schema.json  index.html  package-lock.json  package.json  webpack.config.js
web/src/: App.re  AppStore.re  Auth0.re  Board.re  Board.scss  Client.re  Constants.re  Document.re  Env.re  Event.re  Helmet.re  Hooks.re  Icon.re  Index.re  Index.scss  Utils.re
web/src/api/: GraphQL.re  Request.re
web/src/components/: Arrow.re  BoxContainer.re  BoxSettings.re  BoxSettings.scss  ColorItem.re  ColorItem.scss  ColorPicker.re  ColorPicker.scss  Error.re  Error.scss  Header.re  Header.scss  Image.re  Image.scss  LoginButton.re  LoginButton.scss  Map.re  Map.scss  MapBox.re  MapBox.scss  Markdown.re  Markdown.scss  Menu.re  Menu.scss  NotFound.re  NotFound.scss  Notification.re  Notification.scss  Pen.re  ProgressBar.re  ProgressBar.scss  Title.re  Title.scss  Web.re  Web.scss
web/src/data/: ArrowType.re  Box.re  BoxList.re  Color.re  Err.re  FontSize.re  StrokeWidth.re
