[package]
authors = ["Takahiro Sato <harehare1110@gmail.com>"]
edition = "2018"
name = "server"
version = "0.1.0"

[dependencies]
alcoholic_jwt = "1.0.0"
anyhow = "1.0.32"
async-trait = "0.1.41"
envy = "0.4"
futures = "0.3.7"
graphql_client = "0.9.0"
juniper = {git = "https://github.com/graphql-rust/juniper", branch = "master"}
juniper_warp = {git = "https://github.com/graphql-rust/juniper", branch = "master"}
percent-encoding = "2.1.0"
pretty_env_logger = "0.4"
reqwest = {version = "0.10", features = ["json"]}
scraper = "0.12.0"
serde = {version = "1.0.111", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0"
tokio = {version = "0.2", features = ["full"]}
warp = {version = "0.2", features = ["compression"]}
